--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'PN'
 - !lcsh 'Christmas -- Literary collections'
 - !lcsh 'Christmas -- Poetry'
+- GITenberg
 title: 'Christmas
 
   Its Origin, Celebration and Significance as Related in Prose and Verse'
